--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
     .wrap{max-width:720px; margin:40px auto; padding:0 16px}
     .card{
       background:var(--card-bg);
-      border-radius:12px; /* round all corners */
+      border-radius:12px;
       box-shadow:0 8px 24px rgba(0,0,0,.08);
       padding:28px 24px;
     }
 
-    /* Header sizes */
     h1{
       margin:0 0 6px 0;
       font-weight:900;
       font-size:28px;
       line-height:1.1;
       color:#666666;
-      word-break:break-word; /* ensures no overflow */
+      word-break:break-word;
     }
     .subhead{
       margin:0 0 20px 0;
@@ -43,31 +42,30 @@
       color:#666666;
     }
     .intro {
-  font-size:15px; /* adjust as needed */
-  line-height:1.5;
-  color:#555555;
-  margin-bottom:24px;
-}
+      font-size:15px;
+      line-height:1.5;
+      color:#555555;
+      margin-bottom:24px;
+    }
 
-
-    /* Buttons */
     .btn{
       appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:var(--text-dark);
       width:100%; border-radius:20px; cursor:pointer; display:block;
       transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease;
       margin:14px 0; padding:16px 18px;
+      text-align:left;
     }
     .btn:hover{border-color:var(--brand-blue)}
     .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
     .btn:active{transform:scale(.997)}
 
+    /* Use span instead of div for valid button content */
     .btn-grid{
       display:grid; grid-template-columns:auto 1fr; gap:10px; align-items:center;
     }
-    .title{font-weight:700; font-size:18px; line-height:1.2; text-align:left}
-    .subtitle{font-size:15px; color: #444444; margin-top:3px; line-height:1.2; text-align:left}
+    .title{font-weight:700; font-size:18px; line-height:1.2; display:block}
+    .subtitle{font-size:15px; color:#444444; margin-top:3px; line-height:1.2; display:block}
 
-    /* Prominent icons */
     .icon{
       width:50px; height:50px; flex:none; border-radius:12px; background:var(--brand-blue);
       display:inline-block;
@@ -77,59 +75,51 @@
 </head>
 <body>
   <main class="wrap">
-    <section class="card" role="region" aria-labelledby="title">
+    <section class="card" aria-labelledby="title">
       <h1 id="title">BED HOSPITALITY 2.0</h1>
       <div class="subhead">Self Assessment Form</div>
 
       <p class="intro">
-  Many things may change in BED 2.0 but our care, shared responsibility, passion and common sense will always our foundation.
-This app reminds us of some small and big things and helps us to grow together as one team..
-</p>
+        Many things may change in BED 2.0 but our care, shared responsibility, passion and common sense will always our foundation.
+        This app reminds us of some small and big things and helps us to grow together as one team..
+      </p>
 
       <!-- Button 1: Team (single person) -->
       <button class="btn" onclick="location.href='./team/';"
         aria-label="I am a team member. I want to assess myself.">
-        <div class="btn-grid">
+        <span class="btn-grid">
           <span class="icon" aria-hidden="true">
-            <svg viewBox="0 0 48 48" fill="none">
+            <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="24" cy="16" r="9" fill="#ffffff"/>
-              <path d="M8 38c0-8 7.6-13 16-13s16 5 16 13" fill="#ffffff" opacity=".9"/>
+              <path d="M8 38c0-8 7.6-13 16-13s16 5 16 13" fill="#ffffff"/>
             </svg>
           </span>
-          <div>
-            <div class="title">I am a team member</div>
-            <div class="subtitle">I want to assess myself</div>
-          </div>
-        </div>
+          <span>
+            <span class="title">I am a team member</span>
+            <span class="subtitle">I want to assess myself</span>
+          </span>
+        </span>
       </button>
 
-     <!-- Button 2: Peer (two persons simplified) -->
-<button class="btn" onclick="location.href='./peer/';"
-  aria-label="I am a peer reviewer. I want to review my friend.">
-  <div class="btn-grid">
-    <span class="icon" aria-hidden="true">
-      <svg viewBox="0 0 48 48" fill="none">
-        <!-- front person -->
-        <circle cx="22" cy="22" r="9" fill="#ffffff"/>
-        <!-- back person -->
-        <circle cx="32" cy="18" r="7" fill="#ffffff"/>
-        <!-- shared shoulders -->
-        <path d="M10 38c0-8 7-13 14-13s14 5 14 13" fill="#ffffff"/>
-      </svg>
-    </span>
-    <div>
-      <div class="title">I am a peer reviewer</div>
-      <div class="subtitle">I want to review my friend</div>
-    </div>
-  </div>
-</button>
-
+      <!-- Button 2: Peer (two persons; back silhouette behind front) -->
+      <button class="btn" onclick="location.href='./peer/';"
+        aria-label="I am a peer reviewer. I want to review my friend.">
+        <span class="btn-grid">
+          <span class="icon" aria-hidden="true">
+            <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <!-- back person (drawn first) -->
+              <circle cx="32" cy="16" r="7" fill="#ffffff"/>
+              <!-- front person -->
+              <circle cx="20" cy="18" r="9" fill="#ffffff"/>
+              <!-- front shoulders -->
+              <path d="M6 40c0-8 9-13 18-13s18 5 18 13" fill="#ffffff"/>
+            </svg>
           </span>
-          <div>
-            <div class="title">I am a peer reviewer</div>
-            <div class="subtitle">I want to review my friend</div>
-          </div>
-        </div>
+          <span>
+            <span class="title">I am a peer reviewer</span>
+            <span class="subtitle">I want to review my friend</span>
+          </span>
+        </span>
       </button>
     </section>
   </main>
