--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     h1{margin:0 0 6px; font-weight:800; letter-spacing:.4px}
     h1 span{display:block; font-size:18px; font-weight:800; color:#555; margin-top:6px}
     .intro{
-      margin:18px 0 22px; color:#444; font-size:16px;
+      margin:18px 0 22px; color:#444; font-size:15px;
     }
     .option{
       display:flex; align-items:center; gap:16px;
@@ -43,15 +43,28 @@
       object-fit:cover; background:var(--blue);
       box-shadow: inset 0 0 0 1px rgba(0,0,0,.02);
     }
-    .text .title{font-weight:800; font-size:20px; margin:0 0 2px}
-    .text .subtitle{color:var(--muted); font-size:15px}
-    /* mobile tweaks */
-    @media (max-width:420px){
-      .icon{width:52px;height:52px;border-radius:12px}
-      .text .title{font-size:18px}
-      .text .subtitle{font-size:14px}
-      .card{padding:22px}
-    }
+  .text .title {
+  font-weight: 800;
+     color: 404040;
+    
+  font-size: 32px;   /* desktop size */
+  margin: 0 0 4px;
+}
+
+.text .subtitle {
+  color: 404040;
+  font-size: 24px;   /* desktop size */
+}
+
+/* Responsive scaling for smaller screens */
+@media (max-width: 600px) {
+  .text .title {
+    font-size: 28px;  /* smaller header on mobile */
+  }
+  .text .subtitle {
+    font-size: 17px;  /* smaller subheader on mobile */
+  }
+}
   </style>
 </head>
 <body>
@@ -62,8 +75,8 @@
       </h1>
 
       <p class="intro">
-        BED 2.0 will change but our foundation of care, shared responsibility, passion and common sense will always be the same. 
-        The goal of this app is to remind ourselves about the things that make BED special so we can develop ourselves and others.
+        BED 2.0 will change but our foundation of care, shared responsibility, passion and common sense will always remain. 
+        We launched this app to remind ourselves about the things that make BED special and to provde a mirror that helps us to grow and develop
       </p>
 
       <!-- Team member -->
