--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       background:var(--card); border-radius:var(--radius);
       padding:28px; box-shadow:0 8px 32px rgba(0,0,0,.06);
     }
-    h1{margin:0 0 6px; font-weight:800; letter-spacing:.4px}
-    h1 span{display:block; font-size:18px; font-weight:800; color:#555; margin-top:6px}
+    h1{margin:0 0 6px; font-size: 32px; color: #434343; font-weight:800; letter-spacing:.4px}
+    h1 span{display:block; font-size:20px; font-weight:800; color:#434343; margin-top:6px}
     .intro{
       margin:18px 0 22px; color:#444; font-size:15px;
     }
@@ -43,17 +43,11 @@
       object-fit:cover; background:var(--blue);
       box-shadow: inset 0 0 0 1px rgba(0,0,0,.02);
     }
-  .text .title {
-  font-weight: 800;
-     color: 404040;
-    
-  font-size: 32px;   /* desktop size */
+  .text .title {font-weight: 800; color: #434343; font-size: 20px;   /* desktop size */
   margin: 0 0 4px;
 }
 
-.text .subtitle {
-  color: 404040;
-  font-size: 24px;   /* desktop size */
+.text .subtitle {color: 434343; font-size: 16px;   /* desktop size */
 }
 
 /* Responsive scaling for smaller screens */
