--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </h1>
 
       <p class="intro">
-        BED 2.0 will change but our foundation of care, shared responsibility, passion and common sense will always remain. 
-        We launched this app to remind ourselves about the things that make BED special and to provde a mirror that helps us to grow and develop
+        BED 2.0 will change but its foundation of care, passion, common sense and shared responsibility will always remain. 
+        We launched this app to remind ourselves about the things that make BED special. We look in the mirror so we can grow and develop together
       </p>
 
       <!-- Team member -->
