--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <main class="wrap">
     <section class="card" aria-labelledby="title">
       <h1 id="title">BED HOSPITALITY 2.0
-        <span>SELF ASSESSMENT FORM</span>
+        <span>SELF ASSESSMENT 2015</span>
       </h1>
 
       <p class="intro">
