--- a/index.html
+++ b/index.html
@@ -25,8 +25,24 @@
       background:var(--card); border-radius:var(--radius);
       padding:28px; box-shadow:0 8px 32px rgba(0,0,0,.06);
     }
-    h1{margin:0 0 6px; font-size: 32px; color: #434343; font-weight:800; letter-spacing:.4px}
-    h1 span{display:block; font-size:20px; font-weight:800; color:#434343; margin-top:6px}
+
+    /* 1) HEADER: BED HOSPITALITY 2.0 */
+    h1{
+      margin:0 0 6px;
+      font-size:32px;           /* size */
+      color:#434343;            /* color */
+      font-weight:800; letter-spacing:.4px;
+    }
+
+    /* 2) SUBHEADER: SELF ASSESSMENT */
+    h1 span{
+      display:block;
+      font-size:20px;           /* size */
+      font-weight:800;
+      color:#434343;            /* color */
+      margin-top:6px;
+    }
+
     .intro{
       margin:18px 0 22px; color:#444; font-size:15px;
     }
@@ -43,22 +59,28 @@
       object-fit:cover; background:var(--blue);
       box-shadow: inset 0 0 0 1px rgba(0,0,0,.02);
     }
-  .text .title {font-weight: 800; color: #434343; font-size: 20px;   /* desktop size */
-  margin: 0 0 4px;
-}
 
-.text .subtitle {color: 434343; font-size: 16px;   /* desktop size */
-}
+    /* 3) OPTION TEXT: “I am a team member / peer reviewer” */
+    .text .title{
+      font-weight:800;
+      color:#434343;            /* color */
+      font-size:20px;           /* size (desktop) */
+      margin:0 0 4px;
+    }
 
-/* Responsive scaling for smaller screens */
-@media (max-width: 600px) {
-  .text .title {
-    font-size: 28px;  /* smaller header on mobile */
-  }
-  .text .subtitle {
-    font-size: 17px;  /* smaller subheader on mobile */
-  }
-}
+    /* 4) OPTION SUBTEXT: “I want to assess myself / review my friend” */
+    .text .subtitle{
+      color:#434343;            /* color (fixed missing #) */
+      font-size:16px;           /* size (desktop) */
+    }
+
+    /* Responsive scaling for smaller screens (only the 4 elements) */
+    @media (max-width:600px){
+      h1{ font-size:28px; }
+      h1 span{ font-size:18px; }
+      .text .title{ font-size:18px; }
+      .text .subtitle{ font-size:15px; }
+    }
   </style>
 </head>
 <body>
