--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     /* 1) HEADER: BED HOSPITALITY 2.0 */
     h1{
       margin:0 0 6px;
-      font-size:32px;           /* size */
+      font-size:28px;           /* size */
       color:#434343;            /* color */
       font-weight:800; letter-spacing:.4px;
     }
@@ -37,7 +37,7 @@
     /* 2) SUBHEADER: SELF ASSESSMENT */
     h1 span{
       display:block;
-      font-size:20px;           /* size */
+      font-size:22px;           /* size */
       font-weight:800;
       color:#434343;            /* color */
       margin-top:6px;
@@ -72,6 +72,7 @@
     .text .subtitle{
       color:#434343;            /* color (fixed missing #) */
       font-size:16px;           /* size (desktop) */
+      line-height: 1.2;
     }
 
     /* Responsive scaling for smaller screens (only the 4 elements) */
