--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       </h1>
 
       <p class="intro">
-        BED 2.0 will change but its foundation of care, passion, common sense and shared responsibility will always remain. 
-        We launched this app to remind ourselves about the things that make BED special. We look in the mirror so we can grow and develop together
+        BED 2.0 will change but the foundation of care, passion, common sense and shared responsibility will always remain. 
+        This app reminds us about the things that make BED special. It hel;ps us to look in the mirror so we can grow and develop together
       </p>
 
       <!-- Team member -->
