--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- ✅ Prevent automatic text zooming -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>BED Hospitality 2.0</title>
   <style>
     :root{
-      --blue:#1e88ff; /* your “thing blue” */
+      --blue:#1e88ff;
       --text:#333;
       --muted:#6b7280;
       --card:#fff;
@@ -17,6 +18,7 @@
     body{
       margin:0; background:var(--bg); color:var(--text);
       font:16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      -webkit-text-size-adjust:100%; /* ✅ stops iOS/Android text zoom */
     }
     .wrap{
       max-width:720px; margin:32px auto; padding:20px;
@@ -26,26 +28,29 @@
       padding:28px; box-shadow:0 8px 32px rgba(0,0,0,.06);
     }
 
-    /* 1) HEADER: BED HOSPITALITY 2.0 */
+    /* 1️⃣ HEADER */
     h1{
       margin:0 0 6px;
-      font-size:15px;           /* size */
-      color:#434343;            /* color */
+      font-size:40px !important;   /* consistent desktop size */
+      color:#434343 !important;
       font-weight:800; letter-spacing:.4px;
+      line-height:1.1;
     }
 
-    /* 2) SUBHEADER: SELF ASSESSMENT */
+    /* 2️⃣ SUBHEADER */
     h1 span{
       display:block;
-      font-size:22px;           /* size */
-      font-weight:800;
-      color:#434343;            /* color */
+      font-size:22px !important;
+      font-weight:700;
+      color:#434343 !important;
       margin-top:6px;
+      line-height:1.3;
     }
 
     .intro{
       margin:18px 0 22px; color:#444; font-size:15px;
     }
+
     .option{
       display:flex; align-items:center; gap:16px;
       background:#fff; border:1.5px solid #e6e8eb; border-radius:18px;
@@ -60,25 +65,26 @@
       box-shadow: inset 0 0 0 1px rgba(0,0,0,.02);
     }
 
-    /* 3) OPTION TEXT: “I am a team member / peer reviewer” */
+    /* 3️⃣ MAIN TEXT */
     .text .title{
       font-weight:800;
-      color:#434343;            /* color */
-      font-size:20px;           /* size (desktop) */
-      margin:0 0 4px;
+      color:#434343;
+      font-size:20px;
+      margin:0 0 2px;
+      line-height:1.2;
     }
 
-    /* 4) OPTION SUBTEXT: “I want to assess myself / review my friend” */
+    /* 4️⃣ SUBTEXT */
     .text .subtitle{
-      color:#434343;            /* color (fixed missing #) */
-      font-size:16px;           /* size (desktop) */
-      line-height: 1.2;
+      color:#434343;
+      font-size:16px;
+      line-height:1.3;
     }
 
-    /* Responsive scaling for smaller screens (only the 4 elements) */
+    /* ✅ Proper responsive scaling */
     @media (max-width:600px){
-      h1{ font-size:28px; }
-      h1 span{ font-size:18px; }
+      h1{ font-size:32px !important; }
+      h1 span{ font-size:20px !important; }
       .text .title{ font-size:18px; }
       .text .subtitle{ font-size:15px; }
     }
@@ -93,7 +99,7 @@
 
       <p class="intro">
         BED 2.0 will change but the foundation of care, passion, common sense and shared responsibility will always remain. 
-        This app reminds us about the things that make BED special. It hel;ps us to look in the mirror so we can grow and develop together
+        This app reminds us about the things that make BED special. It helps us to look in the mirror so we can grow and develop together.
       </p>
 
       <!-- Team member -->
