--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     /* 1️⃣ HEADER */
     h1{
       margin:0 0 6px;
-      font-size:40px !important;   /* consistent desktop size */
+      font-size:34px !important;   /* consistent desktop size */
       color:#434343 !important;
       font-weight:800; letter-spacing:.4px;
       line-height:1.1;
@@ -40,7 +40,7 @@
     /* 2️⃣ SUBHEADER */
     h1 span{
       display:block;
-      font-size:22px !important;
+      font-size:24px !important;
       font-weight:700;
       color:#434343 !important;
       margin-top:6px;
@@ -98,8 +98,8 @@
       </h1>
 
       <p class="intro">
-        BED 2.0 will change but the foundation of care, passion, common sense and shared responsibility will always remain. 
-        This app reminds us about the things that make BED special. It helps us to look in the mirror so we can grow and develop together.
+        BED 2.0 will change but the foundation of passion, common sense and shared responsibility will always remain. 
+        This app reminds us about the things that make BED special. By lookinh in the mirror we can grow and develop together.
       </p>
 
       <!-- Team member -->
