--- a/index.html
+++ b/index.html
@@ -30,17 +30,25 @@
     h1{
       margin:0 0 6px 0;
       font-weight:900;
-      font-size:20px;
+      font-size:28px;
       line-height:1.1;
       color:#666666;
       word-break:break-word; /* ensures no overflow */
     }
     .subhead{
-      margin:0 0 20px 0;
+      margin:0 0 14px 0;
       font-weight:800;
       text-transform:uppercase;
       font-size:20px;
       color:#666666;
+    }
+
+    /* Intro text (added) */
+    .intro{
+      margin:12px 0 18px;
+      color:#444;
+      font-size:15px;
+      line-height:1.45;
     }
 
     /* Buttons */
@@ -60,30 +68,33 @@
     .title{font-weight:700; font-size:18px; line-height:1.2; text-align:left}
     .subtitle{font-size:14px; color:var(--muted); margin-top:3px; line-height:1.2; text-align:left}
 
-    /* Prominent icons */
+    /* Icon switched from inline SVG to PNG */
     .icon{
-      width:50px; height:50px; flex:none; border-radius:12px; background:var(--brand-blue);
-      display:inline-block;
+      width:50px; height:50px; flex:none; border-radius:12px;
+      background:var(--brand-blue);
+      display:block; object-fit:cover;
     }
+    /* legacy rule harmless if no inline SVG present */
     .icon svg{width:100%; height:100%}
   </style>
 </head>
 <body>
   <main class="wrap">
     <section class="card" role="region" aria-labelledby="title">
-      <h1 id="title">BED HOSPITALITY 2.1</h1>
+      <h1 id="title">BED HOSPITALITY 2.2</h1>
       <div class="subhead">Self Assessment Form</div>
 
-      <!-- Button 1: Team (single person) -->
+      <!-- Intro text (added) -->
+      <p class="intro">
+        BED 2.0 will change but its foundation of care, passion, common sense and shared responsibility will always remain.
+        We launched this app to remind ourselves about the things that make BED special. We look in the mirror so we can grow and develop together
+      </p>
+
+      <!-- Button 1: Team (icon changed to PNG) -->
       <button class="btn" onclick="location.href='./team/';"
         aria-label="I am a team member. I want to assess myself.">
         <div class="btn-grid">
-          <span class="icon" aria-hidden="true">
-            <svg viewBox="0 0 48 48" fill="none">
-              <circle cx="24" cy="16" r="9" fill="#ffffff"/>
-              <path d="M8 38c0-8 7.6-13 16-13s16 5 16 13" fill="#ffffff" opacity=".9"/>
-            </svg>
-          </span>
+          <img class="icon" src="./icons/team.png" alt="Team member icon" width="50" height="50">
           <div>
             <div class="title">I am a team member</div>
             <div class="subtitle">I want to assess myself</div>
@@ -91,20 +102,11 @@
         </div>
       </button>
 
-      <!-- Button 2: Peer (two persons simplified) -->
+      <!-- Button 2: Peer (icon changed to PNG) -->
       <button class="btn" onclick="location.href='./peer/';"
         aria-label="I am a peer reviewer. I want to review my friend.">
         <div class="btn-grid">
-          <span class="icon" aria-hidden="true">
-            <svg viewBox="0 0 48 48" fill="none">
-              <!-- left person -->
-              <circle cx="18" cy="18" r="7" fill="#ffffff"/>
-              <!-- right person -->
-              <circle cx="30" cy="18" r="7" fill="#ffffff" opacity="0.95"/>
-              <!-- base (shared shoulders) -->
-              <path d="M10 38c0-7 6-12 12-12s12 5 12 12" fill="#ffffff" opacity="0.9"/>
-            </svg>
-          </span>
+          <img class="icon" src="./icons/peer.png" alt="Peer reviewer icon" width="50" height="50">
           <div>
             <div class="title">I am a peer reviewer</div>
             <div class="subtitle">I want to review my friend</div>
