--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       word-break:break-word; /* ensures no overflow */
     }
     .subhead{
-      margin:0 0 14px 0;
+      margin:0 0 16px 0;
       font-weight:800;
       text-transform:uppercase;
       font-size:18px;
@@ -53,8 +53,8 @@
 
     /* Buttons */
     .btn{
-      appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:var(--text-dark);
-      width:100%; border-radius:16px; cursor:pointer; display:block;
+      appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:#1E90FF;
+      width:100%; border-radius:14px; cursor:pointer; display:block;
       transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease;
       margin:14px 0; padding:16px 18px;
     }
@@ -87,7 +87,7 @@
       <!-- Intro text (added) -->
       <p class="intro">
         BED 2.0 will change but the foundation of passion, common sense and shared responsibility will always remain.
-        This app reminds us about the things that make BED special. By looking in this mirror we can grow ourselves and help each other
+        This app reminds us about the things that make BED special. By looking in this mirror we can grow ourselves and help each other <br>
       </p>
 
       <!-- Button 1: Team (icon changed to PNG) -->
