--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
     /* Buttons */
     .btn{
-      appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:#1E90FF;
+      appearance:none; border:1.5px solid #E5E7EB; background:#fff; color:#666666;
       width:100%; border-radius:14px; cursor:pointer; display:block;
       transition:transform .05s ease, border-color .15s ease, box-shadow .15s ease;
       margin:14px 0; padding:16px 18px;
     }
-    .btn:hover{border-color:var(--brand-blue)}
+    border:1.5px solid var(--brand-blue);
     .btn:focus-visible{outline:none; box-shadow:0 0 0 4px rgba(30,144,255,.2); border-color:var(--brand-blue)}
     .btn:active{transform:scale(.997)}
 
@@ -70,7 +70,7 @@
 
     /* Icon switched from inline SVG to PNG */
     .icon{
-      width:50px; height:50px; flex:none; border-radius:12px;
+      width:56px; height:56px; flex:none; border-radius:8px;
       background:var(--brand-blue);
       display:block; object-fit:cover;
     }
