--- a/team/index.html
+++ b/team/index.html
@@ -1129,22 +1129,22 @@ button:disabled,
                     }
                     markerStyle.textContent = ".gauge::after{left: calc(var(--marker) - 5px);}";
                     let rec = "";
-                   if(totals.pct < 55) rec = `Your score suggests limited understanding of BED. It is your responsibility to change that. 
+                   if(totals.pct < 55) rec = `This score suggests limited understanding of BED. It is your responsibility to change that. 
   You need passion and common sense to become a full member of the team.<br><br>
-  Focus on self-development and that starts with awareness. Observe others but don’t copy and find your own identity. 
-  Set a goal per week and ask the team to evaluate your progress. Practice makes people better. Ask your coach for guidance.`;
-else if(totals.pct < 75) rec = `Your score means that you know hospitality but take it too easy. 
-  This shows a lack of focus and understanding that BED plays in the Champions League of hospitality.<br><br>
-  Be more proactive and focus on providing the very best service. Push yourself to act like an equal and responsible member of the team. 
-  Ask your teammates for advice and then ask yourself. Did I do things different today?`;
-else if(totals.pct < 90) rec = `Your score shows that you really understand hospitality and use the core values of BED in daily work. 
+  Focus on self-development. It starts with awareness and practise. Observe others but don’t copy them. Find your own identity. 
+  Set goals each week and ask the team to evaluate your progress. Ask your coach for guidance.`;
+else if(totals.pct < 75) rec = `This score means that you know hospitality but perhaps you take it too easy. 
+  Focus more and understand that BED plays in the Champions League.<br><br>
+  You need to be more proactive and focused. Push yourself to act like an equal member of the team. 
+  Ask your team members for advice and then ask yourself: did I do things different today?`;
+else if(totals.pct < 90) rec = `This score shows that you really understand hospitality and use the core values of BED in daily work. 
   This means you are ready to grow into the next level.<br><br>
   Think about your personal growth. Use your time in BED to learn new things about people, leadership and management. 
-  Without challenge work can become routine. Think about new ideas for BED 2.0 and help your team members with positive feedback.`;
-else rec = `Your score suggests that you truly understand BED. You care for people and take ownership of the hotels. 
-  Continue to inspire your team and lead them by example.<br><br>
-  Drive shared leadership and help develop hotels and people. Use your strengths to grow within the organization and 
-  take a more active role in shaping BED 2.0. You are ready for the next step.`;
+  Without challenge work becomes routine. Think about new ideas for BED 2.0 and help other members with positive feedback.`;
+else rec = `This score suggests that you truly understand BED. You care for people and take ownership of the hotels. 
+  Continue to inspire the teams in BED and lead them by example.<br><br>
+  Get involved in shared leadership and developing the next generation of hotels. Use your strengths to grow in the organization and 
+  take an active role in BED 2.0. You are ready for the next step.`;
 document.getElementById("recText").innerHTML = rec;
 
                     renderGroupResults();
@@ -1211,27 +1211,27 @@ if (typeof window.syncToSheet === 'function') {
                         const recTarget = document.getElementById("pdfBandText");
                         if (!recTarget) return;
                         let rec = "";
-                        if(totals.pct < 55) rec = `Your score suggests limited understanding of BED. It is your responsibility to change that. 
+                        if(totals.pct < 55) rec = `This score suggests limited understanding of BED. It is your responsibility to change that. 
   You need passion and common sense to become a full member of the team.
-  Focus on self-development and that starts with awareness. Observe others but don’t copy and find your own identity. 
-  Set a goal per week and ask the team to evaluate your progress. Practice makes people better. Ask your coach for guidance.`;
-else if(totals.pct < 75) rec = `Your score means that you know hospitality but take it too easy. 
-  This shows a lack of focus and understanding that BED plays in the Champions League of hospitality.
-  Be more proactive and focus on providing the very best service. Push yourself to act like an equal and responsible member of the team. 
-  Ask your teammates for advice and then ask yourself. Did I do things different today?`;
-else if(totals.pct < 90) rec = `Your score shows that you really understand hospitality and use the core values of BED in daily work. 
+  Focus on self-development. It starts with awareness and practise. Observe others but don’t copy them. Find your own identity. 
+  Set goals each week and ask the team to evaluate your progress. Ask your coach for guidance.`;
+else if(totals.pct < 75) rec = `This score means that you know hospitality but perhaps you take it too easy. 
+  Focus more and understand that BED plays in the Champions League.
+  You need to be more proactive and focused. Push yourself to act like an equal member of the team. 
+  Ask your team members for advice and then ask yourself: did I do things different today?`;
+else if(totals.pct < 90) rec = `This score shows that you really understand hospitality and use the core values of BED in daily work. 
   This means you are ready to grow into the next level.
   Think about your personal growth. Use your time in BED to learn new things about people, leadership and management. 
-  Without challenge work can become routine. Think about new ideas for BED 2.0 and help your team members with positive feedback.`;
-else rec = `Your score suggests that you truly understand BED. You care for people and take ownership of the hotels. 
-  Continue to inspire your team and lead them by example.
-  Drive shared leadership and help develop hotels and people. Use your strengths to grow within the organization and 
-  take a more active role in shaping BED 2.0. You are ready for the next step.`;
+  Without challenge work becomes routine. Think about new ideas for BED 2.0 and help other members with positive feedback.`;
+else rec = `This score suggests that you truly understand BED. You care for people and take ownership of the hotels. 
+  Continue to inspire the teams in BED and lead them by example.
+  Get involved in shared leadership and developing the next generation of hotels. Use your strengths to grow in the organization and 
+  take an active role in BED 2.0. You are ready for the next step.`;
 
 recTarget.innerHTML =
   "<div style='line-height:1.4; font-size:16px; color:#434343; font-weight:600;'>Your overall score is " +
   totals.pct +
-  "% based on " +
+  "%. You scored " +
   totals.raw +
   " out of " +
   ((S.questions || []).length * 5 || 175) +
