--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <main class="wrap">
     <section class="card" role="region" aria-labelledby="title">
       <h1 id="title">BED HOSPITALITY 2.0</h1>
-      <div class="subhead">SELF ASSESSMENT  2025</div>
+      <div class="subhead">SELF ASSESSMENT 2025 v1</div>
 
       <!-- Intro text (added) -->
       <p class="intro">
