--- a/team/index.html
+++ b/team/index.html
@@ -1166,7 +1166,7 @@ take an active role in BED 2.0. You are ready for the next step.`;
 
     renderGroupResults();
     buildPdfReport();
-    document.dispatchEvent(new Event("bed:pdf-ready"));
+   document.getElementById("congratsPdf").onclick = () => { buildPdfReport(); window.print(); };
     if (typeof window.syncToSheet === "function")
       setTimeout(() => window.syncToSheet(), 500);
   } catch (e) {
